--- a/site/style.css
+++ b/site/style.css
@@ -1,10 +1,7 @@
 body
 	{
-	  background: url(back.png);
-	  padding-top: 10px;	
-	  padding-left: 400px;
-	  padding-right: 300px;
-	  padding-bottom: 10px;
+	  background: #E6E6FA;
+	  text-align: center;
 	}
 h1
 	{
@@ -38,7 +35,7 @@ p1
 	}
 img
 	{
-	  border-style: dashed;
+	  border-style: dotted;
 	  border-color: #993366;
 	  padding-top: 5px;
 	  padding-left: 5px;
